project(myPusher)
cmake_minimum_required (VERSION 2.8)

include_directories(.)
include_directories(./include)

set(SRC_LIST
	AC3AudioRTPSink.cpp
	AC3AudioRTPSource.cpp
	AC3AudioStreamFramer.cpp
	ADTSAudioFileServerMediaSubsession.cpp
	ADTSAudioFileSource.cpp
	AMRAudioFileServerMediaSubsession.cpp
	AMRAudioFileSink.cpp
	AMRAudioFileSource.cpp
	AMRAudioRTPSink.cpp
	AMRAudioRTPSource.cpp
	AMRAudioSource.cpp
	AudioInputDevice.cpp
	AudioRTPSink.cpp
	AVIFileSink.cpp
	Base64.cpp
	BasicHashTable.cpp
	BasicTaskScheduler0.cpp
	BasicTaskScheduler.cpp
	BasicUDPSink.cpp
	BasicUDPSource.cpp
	BasicUsageEnvironment0.cpp
	BasicUsageEnvironment.cpp
	BitVector.cpp
	ByteStreamFileSource.cpp
	ByteStreamMultiFileSource.cpp
	DarwinInjector.cpp
	DelayQueue.cpp
	DeviceSource.cpp
	DigestAuthentication.cpp
	DVVideoFileServerMediaSubsession.cpp
	DVVideoRTPSink.cpp
	DVVideoRTPSource.cpp
	DVVideoStreamFramer.cpp
	FileServerMediaSubsession.cpp
	FileSink.cpp
	FramedFileSource.cpp
	FramedFilter.cpp
	FramedSource.cpp
	GroupEId.cpp
	Groupsock.cpp
	GroupsockHelper.cpp
	GSMAudioRTPSink.cpp
	H261VideoRTPSource.cpp
	H263plusVideoFileServerMediaSubsession.cpp
	H263plusVideoRTPSink.cpp
	H263plusVideoRTPSource.cpp
	H263plusVideoStreamFramer.cpp
	H263plusVideoStreamParser.cpp
	H264VideoFileServerMediaSubsession.cpp
	H264VideoFileSink.cpp
	H264VideoRTPSink.cpp
	H264VideoRTPSource.cpp
	H264VideoStreamDiscreteFramer.cpp
	H264VideoStreamFramer.cpp
	HashTable.cpp
	HTTPSink.cpp
	inet.c
	InputFile.cpp
	IOHandlers.cpp
	JPEGVideoRTPSink.cpp
	JPEGVideoRTPSource.cpp
	JPEGVideoSource.cpp
	Locale.cpp
	Media.cpp
	MediaSession.cpp
	MediaSink.cpp
	MediaSource.cpp
	MP3ADU.cpp
	MP3ADUdescriptor.cpp
	MP3ADUdescriptor.hh
	MP3ADUinterleaving.cpp
	MP3ADURTPSink.cpp
	MP3ADURTPSource.cpp
	MP3ADUTranscoder.cpp
	MP3AudioFileServerMediaSubsession.cpp
	MP3FileSource.cpp
	MP3HTTPSource.cpp
	MP3Internals.cpp
	MP3InternalsHuffman.cpp
	MP3InternalsHuffmanTable.cpp
	MP3StreamState.cpp
	MP3Transcoder.cpp
	MPEG1or2AudioRTPSink.cpp
	MPEG1or2AudioRTPSource.cpp
	MPEG1or2AudioStreamFramer.cpp
	MPEG1or2Demux.cpp
	MPEG1or2DemuxedElementaryStream.cpp
	MPEG1or2DemuxedServerMediaSubsession.cpp
	MPEG1or2FileServerDemux.cpp
	MPEG1or2VideoFileServerMediaSubsession.cpp
	MPEG1or2VideoHTTPSink.cpp
	MPEG1or2VideoRTPSink.cpp
	MPEG1or2VideoRTPSource.cpp
	MPEG1or2VideoStreamDiscreteFramer.cpp
	MPEG1or2VideoStreamFramer.cpp
	MPEG2IndexFromTransportStream.cpp
	MPEG2TransportFileServerMediaSubsession.cpp
	MPEG2TransportStreamFramer.cpp
	MPEG2TransportStreamFromESSource.cpp
	MPEG2TransportStreamFromPESSource.cpp
	MPEG2TransportStreamIndexFile.cpp
	MPEG2TransportStreamMultiplexor.cpp
	MPEG2TransportStreamTrickModeFilter.cpp
	MPEG4ESVideoRTPSink.cpp
	MPEG4ESVideoRTPSource.cpp
	MPEG4GenericRTPSink.cpp
	MPEG4GenericRTPSource.cpp
	MPEG4LATMAudioRTPSink.cpp
	MPEG4LATMAudioRTPSource.cpp
	MPEG4VideoFileServerMediaSubsession.cpp
	MPEG4VideoStreamDiscreteFramer.cpp
	MPEG4VideoStreamFramer.cpp
	MPEGVideoStreamFramer.cpp
	MPEGVideoStreamParser.cpp
	MultiFramedRTPSink.cpp
	MultiFramedRTPSource.cpp
	NetAddress.cpp
	NetInterface.cpp
	OnDemandServerMediaSubsession.cpp
	our_md5.c
	our_md5hl.c
	OutputFile.cpp
	PassiveServerMediaSubsession.cpp
	QCELPAudioRTPSource.cpp
	QuickTimeFileSink.cpp
	QuickTimeGenericRTPSource.cpp
	RTCP.cpp
	rtcp_from_spec.c
	RTPInterface.cpp
	RTPSink.cpp
	RTPSource.cpp
	RTSPClient.cpp
	RTSPCommon.cpp
	RTSPServer.cpp
	ServerMediaSession.cpp
	SimpleRTPSink.cpp
	SimpleRTPSource.cpp
	SIPClient.cpp
	strDup.cpp
	StreamParser.cpp
	uLawAudioFilter.cpp
	UsageEnvironment.cpp
	VideoRTPSink.cpp
	WAVAudioFileServerMediaSubsession.cpp
	WAVAudioFileSource.cpp
	PusherAPI.cpp
	PusherThread.cpp
	PusherByteStreamSource.cpp
	OSMutex.cpp
	FramesManager.cpp
)

add_library(myPusher SHARED ${SRC_LIST})
target_link_libraries(myPusher pthread)